# music-manager

./: .gitignore  LICENSE  NOTES.md  README.md  package.json  postcss.config.cjs  requirements.txt  svelte.config.js  tailwind.config.cjs  tsconfig.json
.github/workflows/: publish.yaml
src/: app.html  app.scss  service-worker.ts
src-helpers/: create_store_listing.py
src-python/: fs.py  fs_interop.py  main.py  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json
src/lib/ui/: HiddenPlayer.svelte  NavBar.svelte  PlayerNav.svelte  QueueListItem.svelte  SongListItem.svelte  VolumeSlider.svelte
src/routes/: __layout.svelte  index.svelte
src/routes/dev/: queue_list_item.svelte
src/routes/player/: queue.svelte
src/routes/songs/: dev.svelte  index.svelte
src/stores/: settings.ts  store.ts
static/: DowLEpo7A18.m4a  manifest.json
