[package]
name = "app"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0.69"
serde = { version = "1.0.130", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "next", features = [
    "api-all",
] } #{ version = "1.0.0-beta.8", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
